[project]
name = "workspace-core"
version = "0.0.1"
description = "ADHD Framework core: workspace_core"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "exceptions-core",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/workspace_core.git"

[tool.adhd]
type = "core"
layer = "dev"

[tool.uv.sources]
logger-util = { workspace = true }
exceptions-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
